err/hydratk.err
Listing '.'...
Listing './bin'...
Listing './etc'...
Listing './etc/hydratk'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/hydratk'...
Listing './lib/python3.5/site-packages/hydratk/core'...
Listing './lib/python3.5/site-packages/hydratk/extensions'...
Listing './lib/python3.5/site-packages/hydratk/extensions/benchmark'...
Listing './lib/python3.5/site-packages/hydratk/extensions/benchmark/translation'...
Listing './lib/python3.5/site-packages/hydratk/extensions/benchmark/translation/cs'...
Listing './lib/python3.5/site-packages/hydratk/extensions/benchmark/translation/en'...
Listing './lib/python3.5/site-packages/hydratk/lib'...
Listing './lib/python3.5/site-packages/hydratk/lib/array'...
Listing './lib/python3.5/site-packages/hydratk/lib/compat'...
Listing './lib/python3.5/site-packages/hydratk/lib/console'...
Listing './lib/python3.5/site-packages/hydratk/lib/cycles'...
Listing './lib/python3.5/site-packages/hydratk/lib/data'...
Listing './lib/python3.5/site-packages/hydratk/lib/database'...
Listing './lib/python3.5/site-packages/hydratk/lib/database/dbo'...
Listing './lib/python3.5/site-packages/hydratk/lib/database/dbo/drivers'...
Listing './lib/python3.5/site-packages/hydratk/lib/database/dbo/drivers/sqlite'...
Listing './lib/python3.5/site-packages/hydratk/lib/debugging'...
Listing './lib/python3.5/site-packages/hydratk/lib/dynamic'...
Listing './lib/python3.5/site-packages/hydratk/lib/exceptions'...
Listing './lib/python3.5/site-packages/hydratk/lib/install'...
Listing './lib/python3.5/site-packages/hydratk/lib/messaging'...
Listing './lib/python3.5/site-packages/hydratk/lib/messaging/native'...
Compiling './lib/python3.5/site-packages/hydratk/lib/messaging/queue.py'...
***   File "./lib/python3.5/site-packages/hydratk/lib/messaging/queue.py", line 46
    exec estr
            ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/hydratk/lib/messaging/zmq'...
Listing './lib/python3.5/site-packages/hydratk/lib/number'...
Listing './lib/python3.5/site-packages/hydratk/lib/parser'...
Listing './lib/python3.5/site-packages/hydratk/lib/profiling'...
Listing './lib/python3.5/site-packages/hydratk/lib/string'...
Listing './lib/python3.5/site-packages/hydratk/lib/system'...
Listing './lib/python3.5/site-packages/hydratk/lib/translation'...
Listing './lib/python3.5/site-packages/hydratk/translation'...
Listing './lib/python3.5/site-packages/hydratk/translation/core'...
Listing './lib/python3.5/site-packages/hydratk/translation/core/cs'...
Listing './lib/python3.5/site-packages/hydratk/translation/core/en'...
Listing './lib/python3.5/site-packages/hydratk/translation/lib'...
Listing './lib/python3.5/site-packages/hydratk-0.5.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/psutil'...
Listing './lib/python3.5/site-packages/psutil/tests'...
Listing './lib/python3.5/site-packages/psutil-5.4.3.egg-info'...
Listing './lib/python3.5/site-packages/pyzmq-16.0.3.dist-info'...
Listing './lib/python3.5/site-packages/setproctitle-1.1.10.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/xtermcolor'...
Listing './lib/python3.5/site-packages/xtermcolor-1.3.egg-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './lib/python3.5/site-packages/zmq'...
Listing './lib/python3.5/site-packages/zmq/.libs'...
Listing './lib/python3.5/site-packages/zmq/asyncio'...
Listing './lib/python3.5/site-packages/zmq/auth'...
Listing './lib/python3.5/site-packages/zmq/auth/asyncio'...
Listing './lib/python3.5/site-packages/zmq/backend'...
Listing './lib/python3.5/site-packages/zmq/backend/cffi'...
Listing './lib/python3.5/site-packages/zmq/backend/cython'...
Listing './lib/python3.5/site-packages/zmq/devices'...
Listing './lib/python3.5/site-packages/zmq/eventloop'...
Listing './lib/python3.5/site-packages/zmq/eventloop/minitornado'...
Listing './lib/python3.5/site-packages/zmq/eventloop/minitornado/platform'...
Listing './lib/python3.5/site-packages/zmq/green'...
Listing './lib/python3.5/site-packages/zmq/green/eventloop'...
Listing './lib/python3.5/site-packages/zmq/log'...
Listing './lib/python3.5/site-packages/zmq/ssh'...
Listing './lib/python3.5/site-packages/zmq/sugar'...
Listing './lib/python3.5/site-packages/zmq/tests'...
Listing './lib/python3.5/site-packages/zmq/tests/asyncio'...
Listing './lib/python3.5/site-packages/zmq/utils'...
Listing './share'...
Listing './share/python-wheels'...
Listing './var'...
Listing './var/local'...
Listing './var/local/hydratk'...
Listing './var/local/hydratk/dbconfig'...
